<resources>
    <string name="app_name">PassLock</string>
    <string name="passlock_logo">PassLock Logo</string>
    <string name="pass_lock_description">Encrypted password repository</string>
    <string name="passlock_title">PassLock</string>
    <string name="use_your_fingerprint_to_unlock">Use your fingerprint to unlock</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fingerprint_image">fingerprint_image</string>
    <string name="remember_me">Remember my username</string>
    <string name="u_create_account_u"><u>Create account</u></string>
    <string name="title_activity_create_account">Create a new account</string>
    <string name="confirm_parssword">Confirm password</string>
    <string name="use_fingerprints_to_unlock_this_account">Use fingerprints to unlock this account</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_avatar_optional">Add avatar (optional)</string>
    <string name="forget">Forget</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="fingerprint_not_supported">Your device doesn\'t support fingerprint authentication</string>
    <string name="failed_init_cipher">Failed to init Cipher</string>
    <string name="enable_fingerprint">Please enable the fingerprint permission</string>
    <string name="register_fingerprints">No fingerprint configured. Please register at least one fingerprint in your device\'s settings</string>
    <string name="enable_lockscreen">Please enable lockscreen security in your device\'s settings</string>
    <string name="wrong_usr_psswd">Wrong username or password.</string>
    <string name="not_any_fingerprint_account">Not any fingerprint protected account.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fingerprint_not_supported_by_version">This Android version does not support fingerprint authentication</string>
    <string name="failed_to_init_keystore"><![CDATA[Failed init of keyStore & keyGenerator:]]></string>
    <string name="fingerprint_permission_missing">User hasn\'t granted permission to use Fingerprint</string>
    <string name="an_error_occured">An error occurred:</string>
    <string name="sec_account">Secondary account</string>
    <string name="princ_account">Principal account</string>
    <string name="searching">Searching…</string>
    <string name="no_result">No results</string>
    <string name="placeholder">%d</string>
    <string name="decrypting">Decrypting</string>
    <string name="pin">Pin</string>
    <string name="digicode">Digicode</string>
    <string name="cannot_use_fingerprints">Cannot use fingerprints</string>
    <string name="none">None</string>
    <string name="user_avatar">User Avatar</string>
    <string name="password_title">Password Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="associated_account">Associated account</string>
    <string name="note_description">Note / Description</string>
    <string name="forget_user">Forget user?</string>
    <string name="note_description_optionnal">Note / Description (optionnal)</string>
    <string name="associated_account_optionnal">Associated account (optionnal)</string>
    <string name="password_name">Password name</string>
    <string name="password_value">Password value</string>
    <string name="password_category">Password category</string>
    <string name="clear">Clear</string>
    <string name="search_info_string">To search for password pleease use the Searchbar. If you prefer, you can browse your passwords by category thanks to the menu.</string>
    <string name="_88">88</string>
    <string name="passwords_stored">Passwords stored</string>
    <string name="item_icon">Item Icon</string>
    <string name="passwordtitlemaximum32characters">PasswordTitleMaximum32characters</string>
    <string name="search">Search</string>
    <string name="add_a_password">Add a password</string>
    <string name="favorites">Favorites</string>
    <string name="passwords">Passwords</string>
    <string name="pins">Pins</string>
    <string name="digicodes">Digicodes</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>
